spacing bugs fixed

--- a/style.css
+++ b/style.css
@@ -533,8 +533,8 @@ and (min-width: 320px)
 
     footer {
         background-image: url(images/bg-footer-top-mobile.svg);
-        margin-top: 40px;
-        padding: 40px 0 0 0;
+        margin-top: 60px;
+        padding: 50px 0 0 0;
         background-position: top;
         background-size: contain;
     }
@@ -544,11 +544,12 @@ and (min-width: 320px)
         width: 100%;
         padding: 20px;
         display: flex;
+        align-items: unset;
+        justify-content: unset;
         flex-direction: column;
-        justify-content:space-between;
-        align-items: center;
         background-color: var(--secondary-first);
     }
+
 
     /* footer {
         margin-top: 80px;
@@ -566,6 +567,8 @@ and (min-width: 320px)
         margin-top: 15px;
         order:  2;
         width: 100%;
+        max-width: 640px;
+        padding: 0;
     }
 
     .part1 > .logo {
@@ -608,12 +611,12 @@ and (min-width: 320px)
 
     .part2 {
         order: 1;
-        max-width: 100%;
+        max-width: 640px;
         margin-right: 0px;
     }
 
     input.subscribe {
-    width: 300px;
+    width: 100%;
     height: 40px;
 }
 
